# ataf

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: compression.rs  lib.rs  main.rs  spec.rs
src/archive/: read.rs  write.rs
src/commands/: create.rs  extract.rs
